atualização scripts jupyter

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -15,10 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -56,122 +64,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5a73e459-c410-4e77-9399-2649e025b0ca",
-   "metadata": {},
-   "source": [
-    "Script para criação de planilha para lançamento de CT-e FOB (HL) >Atualizações>Movimentos>Nt Conhec. Frete"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc18463e-b33d-4fe0-9cf5-ee1ddd85f3c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
-    "\n",
-    "import os\n",
-    "import xml.etree.ElementTree as ET\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Pasta contendo os arquivos XML\n",
-    "caminho_pasta = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\xml'\n",
-    "\n",
-    "# Lista para armazenar os dados extraídos\n",
-    "dados = []\n",
-    "\n",
-    "# Função para extrair as informações de cada XML\n",
-    "def extrair_dados_do_xml(caminho_xml):\n",
-    "    tree = ET.parse(caminho_xml)\n",
-    "    root = tree.getroot()\n",
-    "    \n",
-    "    # Definir o namespace\n",
-    "    ns = {'nfe': 'http://www.portalfiscal.inf.br/cte'}\n",
-    "    \n",
-    "    # Função auxiliar para extrair texto de elementos com verificação\n",
-    "    def get_element_text(path):\n",
-    "        element = root.find(path, ns)\n",
-    "        return element.text if element is not None else ''\n",
-    "    \n",
-    "    # Ajuste para remover os dois primeiros dígitos\n",
-    "    def ajustar_codigo_municipio(codigo):\n",
-    "        return codigo[2:] if len(codigo) > 2 else codigo\n",
-    "\n",
-    "    # Extrair as informações desejadas\n",
-    "    cte_info = {\n",
-    "        'CNPJ FILIAL': get_element_text('.//nfe:dest/nfe:CNPJ'),\n",
-    "        'CNPJ TRANSP.':get_element_text('.//nfe:emit/nfe:CNPJ'),\n",
-    "        'TRANSPORTADOR':get_element_text('.//nfe:emit/nfe:xNome'),\n",
-    "        'REMETENTE': get_element_text('.//nfe:rem/nfe:xNome'),\n",
-    "        'CNPJ_REMETENTE': get_element_text('.//nfe:rem/nfe:CNPJ'),\n",
-    "        'CTE': get_element_text('.//nfe:ide/nfe:nCT'),\n",
-    "        'SERIE': get_element_text('.//nfe:ide/nfe:serie'),\n",
-    "        'VALOR': get_element_text('.//nfe:vPrest/nfe:vTPrest').replace('.', ','),\n",
-    "        'CHAVEnf': '\\n'.join([chave.text for chave in root.findall('.//nfe:infDoc/nfe:infNFe/nfe:chave', ns)]),\n",
-    "        'EMISSAO': get_element_text('.//nfe:ide/nfe:dhEmi').split('T')[0] if get_element_text('.//nfe:ide/nfe:dhEmi') else '',  # Formato de data apenas\n",
-    "        'UFIni': get_element_text('.//nfe:ide/nfe:UFIni'),\n",
-    "        'cMunIni': ajustar_codigo_municipio(get_element_text('.//nfe:ide/nfe:cMunIni')),\n",
-    "        'xMunIni': get_element_text('.//nfe:ide/nfe:xMunIni'),\n",
-    "        'UFFim': get_element_text('.//nfe:ide/nfe:UFFim'),\n",
-    "        'cMunFim': ajustar_codigo_municipio(get_element_text('.//nfe:ide/nfe:cMunFim')),\n",
-    "        'xMunFim': get_element_text('.//nfe:ide/nfe:xMunFim'),\n",
-    "        'chCTe': get_element_text('.//nfe:infProt/nfe:chCTe'),\n",
-    "        'vTrib': get_element_text('.//nfe:vPrest/nfe:vTPrest').replace('.', ','),\n",
-    "        'icms%': get_element_text('.//nfe:ICMS/nfe:ICMS00/nfe:pICMS'),\n",
-    "        'vICMS': get_element_text('.//nfe:ICMS/nfe:ICMS00/nfe:vICMS').replace('.', ','),\n",
-    "        'ICMSOutUF%': get_element_text('.//nfe:ICMS/nfe:ICMSOutraUF/nfe:pICMSOutraUF'),\n",
-    "        'vICMSOutUF': get_element_text('.//nfe:ICMS/nfe:ICMSOutraUF/nfe:vICMSOutraUF').replace('.', ','),\n",
-    "        \n",
-    "    }\n",
-    "\n",
-    "     # Ajuste para a data de emissão no formato desejado (dd/mm/aaaa)\n",
-    "    if cte_info['EMISSAO']:\n",
-    "        data_emissao = cte_info['EMISSAO'].split('-')\n",
-    "        cte_info['EMISSAO'] = f\"{data_emissao[2]}/{data_emissao[1]}/{data_emissao[0]}\"\n",
-    "    \n",
-    "    return cte_info\n",
-    "\n",
-    "# Percorrer todos os arquivos XML na pasta\n",
-    "for arquivo in os.listdir(caminho_pasta):\n",
-    "    if arquivo.endswith('.xml'):\n",
-    "        caminho_xml = os.path.join(caminho_pasta, arquivo)\n",
-    "        dados.append(extrair_dados_do_xml(caminho_xml))\n",
-    "\n",
-    "# Criar um DataFrame com os dados extraídos\n",
-    "df = pd.DataFrame(dados)\n",
-    "\n",
-    "# Adicionar colunas vazias (em branco) ao DataFrame\n",
-    "colunas_extras = ['Venc.', 'Data lanç.', 'serviço', 'NOME FILIAL', 'COD']\n",
-    "for coluna in colunas_extras:\n",
-    "    df[coluna] = ''  # Preenche a coluna com valores vazios\n",
-    "\n",
-    "# Ajustar a ordem das colunas de acordo com o modelo Excel\n",
-    "df = df[['Venc.', 'Data lanç.', 'serviço', 'CNPJ FILIAL', 'NOME FILIAL', 'CNPJ TRANSP.', 'COD', 'TRANSPORTADOR', 'REMETENTE', 'CNPJ_REMETENTE', 'CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', 'xMunIni', 'UFFim', \n",
-    "         'cMunFim', 'xMunFim', 'chCTe', 'vTrib', 'icms%', 'vICMS', 'ICMSOutUF%', 'vICMSOutUF']]\n",
-    "\n",
-    "# Gerar a planilha Excel\n",
-    "caminho_excel = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx'\n",
-    "df.to_excel(caminho_excel, index=False)\n",
-    "\n",
-    "print(f'Planilha gerada em: {caminho_excel}')\n"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "197a9143-4b52-43eb-ac77-40a363fbd0e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "Script para criação de planilha para lançamento de CT-e CIF - >Atualizações>Movimentos>Nt Conhec. Frete"
+    "### **Script para criação de planilha para lançamento de CT-e CIF**  \n",
+    "usado para lançamento de cte >Especificos Mafra>Rotinas>Fretes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_CIF.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -390,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite a data de vencimento para a coluna 'Venc.':  16/02/2025\n",
-      "Digite o número para a 'NOME FILIAL' (ex: 001002):  001036\n"
+      "Digite a data de vencimento para a coluna 'Venc.':  14/03/2025\n",
+      "Digite o número para a 'NOME FILIAL' (ex: 001002):  001029\n"
      ]
     },
     {
@@ -532,7 +449,9 @@
   {
    "cell_type": "markdown",
    "id": "f8e11ab5-2912-4c6c-bd50-ceec32af5575",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Carregar os dados do Excel**\n",
     "\n",
@@ -605,7 +524,9 @@
   {
    "cell_type": "markdown",
    "id": "b9b84c3a-643a-4677-ba13-5f452c46271e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Criar a tabela no banco de dados**\n",
     "\n",
@@ -659,7 +580,9 @@
   {
    "cell_type": "markdown",
    "id": "b7a6a9a6-303d-43c4-a4ba-fe99175b9edc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Inserir os dados do Excel no banco de dados**\n",
     " \n",
@@ -689,7 +612,9 @@
   {
    "cell_type": "markdown",
    "id": "6995f491-b056-43db-b183-f72858cf63c5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Consultar os dados no banco de dados**\n",
     "\n",
@@ -699,7 +624,9 @@
   {
    "cell_type": "markdown",
    "id": "91a1d17b-0a8e-4243-a1f1-5dcf35a9031c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Usando o Pandas:**\n",
     "\n",
@@ -794,9 +721,7 @@
   {
    "cell_type": "markdown",
    "id": "324a862e-6297-48cb-b358-f105e3cb07c7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Conectar ao banco de dados**\n",
     "\n",
@@ -805,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "be1c2ce4-6236-47c1-8c33-c332188a2c9b",
    "metadata": {},
    "outputs": [],
@@ -833,9 +758,7 @@
   {
    "cell_type": "markdown",
    "id": "2f5e2507-2890-40fa-a361-75a125cced4b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Consultar usando SQL**\n",
     "\n",
@@ -851,13 +774,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "996983eb-0dfe-49d9-8f4c-ccd6075aa1a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('RENYLAB - QUIMICA E FARMACEUTICA LTDA', '00562583000144', '006578', '0001')\n"
+     ]
+    }
+   ],
    "source": [
     "# Consultar todos os dados da tabela fornecedores\n",
-    "cursor.execute(\"SELECT * FROM fornecedores\") #Alterar o codigo de consulta SQL\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '006578'\") #Alterar o codigo de consulta SQL\n",
     "resultados = cursor.fetchall()\n",
     "\n",
     "# Exibir os resultados\n",
@@ -868,9 +799,7 @@
   {
    "cell_type": "markdown",
    "id": "7b75bd4b-d53f-4f49-855a-1fe20fc1ac7d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Consultar usando Pandas**\n",
     "\n",
@@ -885,10 +814,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "558aff5e-fec9-452c-a545-927d39956e18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       REMETENTE  CNPJ_REMETENTE     cod  loja\n",
+      "0  DIAGNOSTEK IND E COMERC PROD CIENTIFICOS LTDA  06223055000147    None  None\n",
+      "1         LABOFARMA PRODUTOS FARMACEUTICOS LTDA.  07863523001778  036584  0017\n",
+      "2             ACHE LABORATORIOS FARMACEUTICOS SA  60659463000191  002218  0001\n",
+      "3             CRAL ARTIGOS PARA LABORATORIO LTDA  48740849000713  015659  0007\n",
+      "4                          BLAU FARMACEUTICA S.A  58430828000160  120099  0001\n"
+     ]
+    }
+   ],
    "source": [
     "# Carregar os dados da tabela fornecedores em um DataFrame\n",
     "query = \"SELECT * FROM fornecedores\"\n",
@@ -1004,9 +946,7 @@
   {
    "cell_type": "markdown",
    "id": "37753849-b0a6-4ea5-8097-47a16baebc5c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Inserir usando SQL**\n",
     "\n",
@@ -1024,28 +964,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "06251bd9-a06e-4482-aa5e-32e71ab59131",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('DC SUPRIMENTOS COMERCIAL DISTR LTDA', '38486893000108', '017109', '0001')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Inserir um novo registro na tabela fornecedores\n",
-    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('Novo Fornecedor', '12345678901234', '99999', '0001')\")\n",
+    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('DC SUPRIMENTOS COMERCIAL DISTR LTDA', '38486893000108', '017109', '0001')\")\n",
     "\n",
     "# Confirmar a inserção\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a inserção\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '99999'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '017109'\")\n",
     "print(cursor.fetchall())"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "de717e4c-11ee-472c-bcbd-d746f76b16c5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Inserir usando Pandas**\n",
     "\n",
@@ -1071,16 +1017,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "677d14ce-6544-4365-bb62-050c60737dca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                REMETENTE  CNPJ_REMETENTE     cod  loja\n",
+      "52  RENYLAB - QUIMICA E FARMACEUTICA LTDA  00562583000144  006578  0001\n"
+     ]
+    }
+   ],
    "source": [
     "# Criar um novo DataFrame com os dados a serem inseridos\n",
     "novo_fornecedor = pd.DataFrame({\n",
-    "    'REMETENTE': ['Novo Fornecedor'],\n",
-    "    'CNPJ_REMETENTE': ['12345678901234'],\n",
-    "    'cod': ['99999'],\n",
+    "    'REMETENTE': ['RENYLAB - QUIMICA E FARMACEUTICA LTDA'],\n",
+    "    'CNPJ_REMETENTE': ['00562583000144'],\n",
+    "    'cod': ['006578'],\n",
     "    'loja': ['0001']\n",
     "})\n",
     "\n",
@@ -1092,7 +1047,7 @@
     "df.to_sql('fornecedores', conn, if_exists='replace', index=False)\n",
     "\n",
     "# Verificar a inserção\n",
-    "print(df[df['cod'] == '99999'])"
+    "print(df[df['cod'] == '006578'])"
    ]
   },
   {
@@ -1236,7 +1191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
