--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
    "outputs": [
@@ -308,14 +308,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Digite a data de vencimento para a coluna 'Venc.':  14/03/2025\n",
-      "Digite o número para a 'NOME FILIAL' (ex: 001002):  001029\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6578766e-5c85-4f56-9dd4-baed4d888395",
    "metadata": {},
    "outputs": [],
@@ -706,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5aa1fe36-9b39-4f12-b48c-52a5b1e7738f",
    "metadata": {},
    "outputs": [],
@@ -726,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "be1c2ce4-6236-47c1-8c33-c332188a2c9b",
    "metadata": {},
    "outputs": [],
@@ -960,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "06251bd9-a06e-4482-aa5e-32e71ab59131",
    "metadata": {},
    "outputs": [
@@ -974,7 +966,7 @@
    ],
    "source": [
     "# Inserir um novo registro na tabela fornecedores\n",
-    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('DC SUPRIMENTOS COMERCIAL DISTR LTDA', '38486893000108', '017109', '0001')\")\n",
+    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('GLAXOSMITHKLINE BRASIL LTDA', '33247743004450', '005370', '0044')\")\n",
     "\n",
     "# Confirmar a inserção\n",
     "conn.commit()\n",
@@ -1187,7 +1179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
