--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
    "outputs": [
@@ -22,6 +22,17 @@
      "output_type": "stream",
      "text": [
       "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
    "outputs": [
@@ -303,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
    "outputs": [
@@ -718,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "be1c2ce4-6236-47c1-8c33-c332188a2c9b",
    "metadata": {},
    "outputs": [],
@@ -952,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "06251bd9-a06e-4482-aa5e-32e71ab59131",
    "metadata": {},
    "outputs": [
@@ -960,19 +971,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('DC SUPRIMENTOS COMERCIAL DISTR LTDA', '38486893000108', '017109', '0001')]\n"
+      "[('GUERBET IMAGEM DO BRASIL LTDA', '30153811000436', '036783', '0004')]\n"
      ]
     }
    ],
    "source": [
     "# Inserir um novo registro na tabela fornecedores\n",
-    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('GLAXOSMITHKLINE BRASIL LTDA', '33247743004450', '005370', '0044')\")\n",
+    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('GUERBET IMAGEM DO BRASIL LTDA', '30153811000436', '036783', '0004')\")\n",
     "\n",
     "# Confirmar a inserção\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a inserção\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '017109'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '036783'\")\n",
     "print(cursor.fetchall())"
    ]
   },
@@ -1071,19 +1082,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "65a35eb2-523a-4a2e-aee3-bf6a09f3e06a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Excluir um registro da tabela fornecedores\n",
-    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '99999'\")\n",
+    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '036783'\")\n",
     "\n",
     "# Confirmar a exclusão\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a exclusão\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '99999'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '036783'\")\n",
     "print(cursor.fetchall())"
    ]
   },
@@ -1179,7 +1198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1193,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
