add new information for .db and code in notebook

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "be1c2ce4-6236-47c1-8c33-c332188a2c9b",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "996983eb-0dfe-49d9-8f4c-ccd6075aa1a9",
    "metadata": {},
    "outputs": [
@@ -781,13 +781,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('RENYLAB - QUIMICA E FARMACEUTICA LTDA', '00562583000144', '006578', '0001')\n"
+      "('SOFT FILM INDUSTRIA E COMERCIO DE PLASTICOS LTDA', '10829587000108', '012262', '0001')\n"
      ]
     }
    ],
    "source": [
     "# Consultar todos os dados da tabela fornecedores\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '006578'\") #Alterar o codigo de consulta SQL\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '012262'\") #Alterar o codigo de consulta SQL\n",
     "resultados = cursor.fetchall()\n",
     "\n",
     "# Exibir os resultados\n",
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "06251bd9-a06e-4482-aa5e-32e71ab59131",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
    ],
    "source": [
     "# Inserir um novo registro na tabela fornecedores\n",
-    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('GUERBET IMAGEM DO BRASIL LTDA', '30153811000436', '036783', '0004')\")\n",
+    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('PROD. ROCHE QUIM. E FARMAC. S.A', '33009945000204', '021733', '0002')\")\n",
     "\n",
     "# Confirmar a inserção\n",
     "conn.commit()\n",
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "65a35eb2-523a-4a2e-aee3-bf6a09f3e06a",
    "metadata": {},
    "outputs": [
@@ -1096,13 +1096,13 @@
    ],
    "source": [
     "# Excluir um registro da tabela fornecedores\n",
-    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '036783'\")\n",
+    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '012262'\")\n",
     "\n",
     "# Confirmar a exclusão\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a exclusão\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '036783'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '012262'\")\n",
     "print(cursor.fetchall())"
    ]
   },
@@ -1188,12 +1188,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f37bb365",
+   "metadata": {},
+   "source": [
+    "Para inserir **múltiplos registros** de uma só vez na tabela `fornecedores`, você pode usar uma das seguintes abordagens:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **1. Inserção com `executemany()` (Recomendado para muitos registros)**\n",
+    "Ideal para inserir vários registros em uma única operação, melhorando a performance.\n",
+    "\n",
+    "```python\n",
+    "# Dados a serem inseridos (lista de tuplas)\n",
+    "novos_fornecedores = [\n",
+    "    ('Fornecedor A', '11111111111111', '10001', '0001'),\n",
+    "    ('Fornecedor B', '22222222222222', '10002', '0002'),\n",
+    "    ('Fornecedor C', '33333333333333', '10003', '0003')\n",
+    "]\n",
+    "\n",
+    "# Inserir todos os registros de uma vez\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES (?, ?, ?, ?)\",\n",
+    "    novos_fornecedores\n",
+    ")\n",
+    "\n",
+    "# Confirmar a inserção\n",
+    "conn.commit()\n",
+    "\n",
+    "# Verificar os registros inseridos\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod IN ('10001', '10002', '10003')\")\n",
+    "print(cursor.fetchall())\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **2. Inserção em loop com `execute()`**\n",
+    "Útil se você precisar de lógica personalizada para cada registro.\n",
+    "\n",
+    "```python\n",
+    "# Lista de dicionários com os dados\n",
+    "fornecedores = [\n",
+    "    {'nome': 'Fornecedor X', 'cnpj': '44444444444444', 'cod': '20001', 'loja': '0004'},\n",
+    "    {'nome': 'Fornecedor Y', 'cnpj': '55555555555555', 'cod': '20002', 'loja': '0005'}\n",
+    "]\n",
+    "\n",
+    "# Inserir cada registro em um loop\n",
+    "for fornecedor in fornecedores:\n",
+    "    cursor.execute(\n",
+    "        \"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES (?, ?, ?, ?)\",\n",
+    "        (fornecedor['nome'], fornecedor['cnpj'], fornecedor['cod'], fornecedor['loja'])\n",
+    "    )\n",
+    "\n",
+    "# Confirmar as inserções\n",
+    "conn.commit()\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **3. Usar Pandas para inserção direta**\n",
+    "Se seus dados já estiverem em um DataFrame:\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Criar DataFrame com os novos registros\n",
+    "df_novos = pd.DataFrame({\n",
+    "    'REMETENTE': ['Fornecedor Pandas 1', 'Fornecedor Pandas 2'],\n",
+    "    'CNPJ_REMETENTE': ['66666666666666', '77777777777777'],\n",
+    "    'cod': ['30001', '30002'],\n",
+    "    'loja': ['0006', '0007']\n",
+    "})\n",
+    "\n",
+    "# Inserir no banco de dados (substitua a tabela se necessário)\n",
+    "df_novos.to_sql('fornecedores', conn, if_exists='append', index=False)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Observações importantes:**\n",
+    "1. **Placeholders (`?`):**  \n",
+    "   Use `?` para evitar SQL injection (não formate strings manualmente com `f-strings` ou `%s`).\n",
+    "\n",
+    "2. **Transações:**  \n",
+    "   Sempre faça `conn.commit()` após inserções/atualizações para persistir os dados.\n",
+    "\n",
+    "3. **Erros:**  \n",
+    "   Adicione tratamento de erros para evitar problemas:\n",
+    "   ```python\n",
+    "   try:\n",
+    "       cursor.executemany(...)\n",
+    "       conn.commit()\n",
+    "   except sqlite3.Error as e:\n",
+    "       print(\"Erro ao inserir registros:\", e)\n",
+    "       conn.rollback()\n",
+    "   ```\n",
+    "\n",
+    "4. **Desempenho:**  \n",
+    "   Para **grandes volumes de dados**, `executemany()` é mais eficiente que loops individuais.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Exemplo Completo:**\n",
+    "```python\n",
+    "import sqlite3\n",
+    "\n",
+    "# Conectar ao banco de dados\n",
+    "conn = sqlite3.connect('fornecedores.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Dados para inserção (método executemany)\n",
+    "dados = [\n",
+    "    ('Empresa Alpha', '12345678901234', '50001', '0010'),\n",
+    "    ('Empresa Beta', '98765432109876', '50002', '0011')\n",
+    "]\n",
+    "\n",
+    "# Inserir múltiplos registros\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES (?, ?, ?, ?)\",\n",
+    "    dados\n",
+    ")\n",
+    "\n",
+    "# Salvar e fechar\n",
+    "conn.commit()\n",
+    "conn.close()\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Escolha o método que melhor se adapta ao seu cenário! Se tiver dúvidas, é só perguntar. 😊"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "139a8a0f-e662-4a52-9d60-7cbc1973a937",
+   "execution_count": 14,
+   "id": "425bdab1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# Conectar ao banco de dados\n",
+    "conn = sqlite3.connect('fornecedores.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Dados para inserção (método executemany)\n",
+    "dados = [\n",
+    "    ('BIOLAB SANUS FARMACEUTICA LTDA', '49475833001765', '005956', '0017'),\n",
+    "    ('SOFT FILM INDUSTRIA E COMERCIO DE PLASTICOS LTDA', '10829587000108', '012262', '0001')\n",
+    "]\n",
+    "\n",
+    "# Inserir múltiplos registros\n",
+    "cursor.executemany(\n",
+    "    \"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES (?, ?, ?, ?)\",\n",
+    "    dados\n",
+    ")\n",
+    "\n",
+    "# Salvar e fechar\n",
+    "conn.commit()"
+   ]
   }
  ],
  "metadata": {
