add new informacion for db

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -4,7 +4,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "c0525f89-591b-4abb-9068-be7b81d9f864",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Script para criação do arquivo chave.txt**  \n",
     "\n",
@@ -16,26 +18,7 @@
    "execution_count": null,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -76,7 +59,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "197a9143-4b52-43eb-ac77-40a363fbd0e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Script para criação de planilha para lançamento de CT-e CIF**  \n",
     "usado para lançamento de cte >Especificos Mafra>Rotinas>Fretes"
@@ -84,18 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_CIF.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -314,18 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -506,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6578766e-5c85-4f56-9dd4-baed4d888395",
    "metadata": {},
    "outputs": [],
@@ -695,9 +664,7 @@
   {
    "cell_type": "markdown",
    "id": "f60be84b-5d6b-4d59-b9a2-c4f32afae988",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Fechar a conexão com o banco de dados**\n",
     "\n",
@@ -709,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5aa1fe36-9b39-4f12-b48c-52a5b1e7738f",
    "metadata": {},
    "outputs": [],
@@ -729,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "be1c2ce4-6236-47c1-8c33-c332188a2c9b",
    "metadata": {},
    "outputs": [],
@@ -773,18 +740,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "996983eb-0dfe-49d9-8f4c-ccd6075aa1a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('SOFT FILM INDUSTRIA E COMERCIO DE PLASTICOS LTDA', '10829587000108', '012262', '0001')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Consultar todos os dados da tabela fornecedores\n",
     "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '012262'\") #Alterar o codigo de consulta SQL\n",
@@ -813,23 +772,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "558aff5e-fec9-452c-a545-927d39956e18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                       REMETENTE  CNPJ_REMETENTE     cod  loja\n",
-      "0  DIAGNOSTEK IND E COMERC PROD CIENTIFICOS LTDA  06223055000147    None  None\n",
-      "1         LABOFARMA PRODUTOS FARMACEUTICOS LTDA.  07863523001778  036584  0017\n",
-      "2             ACHE LABORATORIOS FARMACEUTICOS SA  60659463000191  002218  0001\n",
-      "3             CRAL ARTIGOS PARA LABORATORIO LTDA  48740849000713  015659  0007\n",
-      "4                          BLAU FARMACEUTICA S.A  58430828000160  120099  0001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Carregar os dados da tabela fornecedores em um DataFrame\n",
     "query = \"SELECT * FROM fornecedores\"\n",
@@ -966,24 +912,16 @@
    "execution_count": null,
    "id": "06251bd9-a06e-4482-aa5e-32e71ab59131",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('GUERBET IMAGEM DO BRASIL LTDA', '30153811000436', '036783', '0004')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inserir um novo registro na tabela fornecedores\n",
-    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('PROD. ROCHE QUIM. E FARMAC. S.A', '33009945000204', '021733', '0002')\")\n",
+    "cursor.execute(\"INSERT INTO fornecedores (REMETENTE, CNPJ_REMETENTE, cod, loja) VALUES ('CADPLAST INDUSTRIA E COMERCIO DE PLASTICO LTDA', '67308635000121', '013942', '0001')\")\n",
     "\n",
     "# Confirmar a inserção\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a inserção\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '036783'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '013942'\")\n",
     "print(cursor.fetchall())"
    ]
   },
@@ -1016,19 +954,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "677d14ce-6544-4365-bb62-050c60737dca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                REMETENTE  CNPJ_REMETENTE     cod  loja\n",
-      "52  RENYLAB - QUIMICA E FARMACEUTICA LTDA  00562583000144  006578  0001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Criar um novo DataFrame com os dados a serem inseridos\n",
     "novo_fornecedor = pd.DataFrame({\n",
@@ -1052,7 +981,9 @@
   {
    "cell_type": "markdown",
    "id": "daf10118-a092-4885-ac14-077eff809fa8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **Excluir dados**\n",
     "\n",
@@ -1062,9 +993,7 @@
   {
    "cell_type": "markdown",
    "id": "61805f27-7335-48d5-bff1-c2dc078eb7a5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Excluir usando SQL**\n",
     "\n",
@@ -1082,36 +1011,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "65a35eb2-523a-4a2e-aee3-bf6a09f3e06a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excluir um registro da tabela fornecedores\n",
-    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '012262'\")\n",
+    "cursor.execute(\"DELETE FROM fornecedores WHERE cod = '020099' AND loja = '0001' \")\n",
     "\n",
     "# Confirmar a exclusão\n",
     "conn.commit()\n",
     "\n",
     "# Verificar a exclusão\n",
-    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '012262'\")\n",
+    "cursor.execute(\"SELECT * FROM fornecedores WHERE cod = '020099' AND loja = '0001'\")\n",
     "print(cursor.fetchall())"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6b8b24ad-97aa-4d99-aa7b-82ca8f4cdef7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Excluir usando Pandas**\n",
     "\n",
@@ -1152,9 +1071,7 @@
   {
    "cell_type": "markdown",
    "id": "b330e15e-442f-40af-83d5-8231aa871480",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Fechar a conexão**\n",
     "\n",
@@ -1321,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "425bdab1",
    "metadata": {},
    "outputs": [],
