--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -961,10 +961,10 @@
    "source": [
     "# Criar um novo DataFrame com os dados a serem inseridos\n",
     "novo_fornecedor = pd.DataFrame({\n",
-    "    'REMETENTE': ['RENYLAB - QUIMICA E FARMACEUTICA LTDA'],\n",
-    "    'CNPJ_REMETENTE': ['00562583000144'],\n",
-    "    'cod': ['006578'],\n",
-    "    'loja': ['0001']\n",
+    "    'REMETENTE': ['GELOTECH SOLUCOES TERMICAS LTDA'],\n",
+    "    'CNPJ_REMETENTE': ['13549636000210'],\n",
+    "    'cod': ['019920'],\n",
+    "    'loja': ['0002']\n",
     "})\n",
     "\n",
     "# Adicionar os novos dados ao DataFrame existente\n",
@@ -975,7 +975,7 @@
     "df.to_sql('fornecedores', conn, if_exists='replace', index=False)\n",
     "\n",
     "# Verificar a inserção\n",
-    "print(df[df['cod'] == '006578'])"
+    "print(df[df['cod'] == '019920'])"
    ]
   },
   {
