atualização fornecedores.db, correção scripts xml

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -961,10 +961,10 @@
    "source": [
     "# Criar um novo DataFrame com os dados a serem inseridos\n",
     "novo_fornecedor = pd.DataFrame({\n",
-    "    'REMETENTE': ['GELOTECH SOLUCOES TERMICAS LTDA'],\n",
-    "    'CNPJ_REMETENTE': ['13549636000210'],\n",
-    "    'cod': ['019920'],\n",
-    "    'loja': ['0002']\n",
+    "    'REMETENTE': ['RENYLAB - QUIMICA E FARMACEUTICA LTDA'],\n",
+    "    'CNPJ_REMETENTE': ['00562583000144'],\n",
+    "    'cod': ['006578'],\n",
+    "    'loja': ['0001']\n",
     "})\n",
     "\n",
     "# Adicionar os novos dados ao DataFrame existente\n",
@@ -975,7 +975,7 @@
     "df.to_sql('fornecedores', conn, if_exists='replace', index=False)\n",
     "\n",
     "# Verificar a inserção\n",
-    "print(df[df['cod'] == '019920'])"
+    "print(df[df['cod'] == '006578'])"
    ]
   },
   {
@@ -1232,8 +1232,7 @@
     "```\n",
     "\n",
     "---\n",
-    "\n",
-    "Escolha o método que melhor se adapta ao seu cenário! Se tiver dúvidas, é só perguntar. 😊"
+    "\n"
    ]
   },
   {
@@ -1251,8 +1250,8 @@
     "\n",
     "# Dados para inserção (método executemany)\n",
     "dados = [\n",
-    "    ('BIOLAB SANUS FARMACEUTICA LTDA', '49475833001765', '005956', '0017'),\n",
-    "    ('SOFT FILM INDUSTRIA E COMERCIO DE PLASTICOS LTDA', '10829587000108', '012262', '0001')\n",
+    "    ('SG TECNOLOGIA CLINICA LTDA', '61485900001132', '036850', '0011'),\n",
+    "    ('2I PRODUTOS ODONTOLOGICOS E MEDICO-HOSPITALARES EIRELI - EPP','20180587000175', '035837', '0001')\n",
     "]\n",
     "\n",
     "# Inserir múltiplos registros\n",
@@ -1262,13 +1261,14 @@
     ")\n",
     "\n",
     "# Salvar e fechar\n",
-    "conn.commit()"
+    "conn.commit()\n",
+    "conn.close()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv (3.10.11)",
    "language": "python",
    "name": "python3"
   },
